<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Acitivity.AddProduct">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="#72DB68"
            android:padding="20dp"
            android:text="Name of the Shop"
            android:textColor="#000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/product_info"
            android:textColor="#000"
            android:textSize="22sp"
            android:textStyle="bold|italic" />


        <EditText
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:hint="@string/productname"
            android:padding="15dp" />

        <EditText
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:gravity="top"
            android:hint="@string/product_description"
            android:padding="15dp" />

        <EditText
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:gravity="top"
            android:hint="@string/product_price"
            android:inputType="number"
            android:padding="15dp" />

        <Button
            android:id="@+id/btn_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundbutton"
            android:padding="15dp"
            android:text="@string/choose_product_image"
            android:textColor="#d8ff17" />

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:elevation="10dp"
            android:padding="5dp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:background="@drawable/internet_overlay"
            />
        <Button
            android:id="@+id/btn_addProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundbutton"
            android:padding="15dp"
            android:text="@string/upload_product"
            android:textAlignment="center"
            android:textColor="#d8ff17"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>