<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:theme="@style/TextColor"
    tools:context=".Acitivity.About">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border"
        android:padding="5dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/shop_name"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/shopName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/name"
            android:fontFamily="@font/raleway_italic"
            android:padding="5dp"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/editShopName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shopName"
            android:text="@string/edit_shop_name" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:padding="5dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/address"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/shopAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/address"
            android:padding="5dp"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/editShopAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shopAddress"
            android:text="Edit Shop Adress" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:padding="5dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Phone:"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/shopPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/phone"
            android:padding="5dp"
            android:text="+91 987654321"
            android:textSize="24sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/editShopPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shopPhone"
            android:text="Edit Shop Phone Number" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:padding="5dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Email:"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/shopEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/email"
            android:padding="5dp"
            android:text="android.studio@gmail.com"
            android:textSize="24sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/editShopEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shopEmail"
            android:text="Edit Shop Email" />
    </RelativeLayout>
</LinearLayout>